--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/installation/INSTALL.lyx
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/installation/INSTALL.lyx
@@ -5164,7 +5164,7 @@ Open you webbrowser and load http://apache.my.intranet.
 ranet) and for every client.
 \layout Subsection
 
-ezPublish 2.2.x
+eZ publish 2.2.x
 \layout Subsubsection*
 
 Unpacking the files
