--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/installation/INSTALL.ps
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/installation/INSTALL.ps
@@ -11,7 +11,7 @@
 %DVIPSWebPage: (www.radicaleye.com)
 %DVIPSCommandLine: dvips -t a4 -o INSTALL.ps INSTALL.dvi
 %DVIPSParameters: dpi=600, compressed
-%DVIPSSource:  TeX output 2002.07.30:1355
+%DVIPSSource:  TeX output 2002.07.30:1359
 %%BeginProcSet: texc.pro
 %!
 /TeXDict 300 dict def TeXDict begin/N{def}def/B{bind def}N/S{exch}N/X{S
@@ -293,11 +293,11 @@ rf /Ff 133[ 29 33 33 48 33 33 18 26 22 33 33 33 33 52
 TeXBase1Encoding ReEncodeFont} 51 66.4176 /Times-Roman
 rf /Fg 198[ 25 25 25 25 25 25 25 25 25 49[{
 TeXBase1Encoding ReEncodeFont} 9 49.8132 /Times-Roman
-rf /Fh 133[ 44 50 50 72 50 55 33 39 44 55 55 50 55 83
-28 55 33 28 55 50 33 44 55 44 55 50 6[ 66 1[ 72 100 72
-2[ 55 72 78 61 78 72 94 66 2[ 39 78 78 61 1[ 72 72 1[ 72
-1[ 50 5[ 50 50 50 50 50 50 50 50 50 50 1[ 25 33 3[ 33
-33 40[{ TeXBase1Encoding ReEncodeFont} 60 99.6264 /Times-Bold
+rf /Fh 134[ 50 50 72 50 55 33 39 44 55 55 50 55 83 28
+55 33 28 55 50 33 44 55 44 55 50 6[ 66 1[ 72 100 72 2[ 55
+72 78 61 78 72 94 66 2[ 39 78 78 61 1[ 72 72 1[ 72 1[ 50
+5[ 50 50 50 50 50 50 50 50 50 50 1[ 25 33 3[ 33 33 40[{
+TeXBase1Encoding ReEncodeFont} 59 99.6264 /Times-Bold
 rf
 %DVIPSBitmapFont: Fi cmsy10 10 1
 /Fi 1 16 df<EB1FF0EBFFFE487F000714C04814E04814F04814F8A24814FCA3B612FEA9
@@ -2083,10 +2083,10 @@ b(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g
 3321 y(2.8.7) e(Determing) 19 b(and) h(pub) n(lishing) g(your) f(host) h
 (names) 62 b(.) 41 b(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g
 (.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) h(.) f(.) 100
-b(26) 465 3446 y(2.8.8) e(ezPublish) 20 b(2.2.) n(x) 51
-b(.) 41 b(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f
-(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h
-(.) f(.) g(.) g(.) h(.) f(.) g(.) h(.) f(.) 100 b(27) 465
+b(26) 465 3446 y(2.8.8) e(eZ) 20 b(publish) g(2.2.) n(x) 83
+b(.) 41 b(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g
+(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f
+(.) g(.) g(.) h(.) f(.) g(.) h(.) f(.) 100 b(27) 465
 3571 y(2.8.9) e(Creating) 20 b(the) g(database) 31 b(.) 42
 b(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) h(.) f(.) g(.) g
 (.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f
@@ -11745,8 +11745,8 @@ b(bro) l(wser) g(should) f(sho) n(w) g(the) h(apach) n(e) g(welcome) 150
 (host) f(name) g(you) g(just) h(entered) f(\(ez.m) n(y) -5
 b(.intran) n(et) 22 b(and) f(ezadmin) n(.my) -5 b(.in) n(tranet\)) 21
 b(and) g(for) 150 712 y(e) n(v) o(ery) e(client.) p Fh
-150 975 a(2.8.8) 99 b(ezPublish) 25 b(2.2.x) p Fn 150
-1156 a(Unpacking) 20 b(the) h(\002les) p Fp 150 1336
+150 975 a(2.8.8) 99 b(eZ) 25 b(pub) r(lish) f(2.2.x) p
+Fn 150 1156 a(Unpacking) c(the) h(\002les) p Fp 150 1336
 a(Extract) 35 b(the) h(ezpu) n(blish) g(\002le) g(to) g
 (C:\\Apache\\htd) n(ocs\\) g(,) k(using) 35 b(folde) n(r) h(names.) 71
 b(This) 36 b(will) g(gi) n(v) o(e) f(you) g(all) h(\002les) g(in) 150
