--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/installation/INSTALL.tex
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/installation/INSTALL.tex
@@ -1907,7 +1907,7 @@ name you just entered (ez.my.intranet and ezadmin.my.intranet) and
 for every client.
 
 
-\subsection{ezPublish 2.2.x}
+\subsection{eZ publish 2.2.x}
 
 
 \subsubsection*{Unpacking the files}
