updated chapter 2.1.1 Need requirements Don't require access to apache config as we have nVH mode now

--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/installation/INSTALL.ps
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/installation/INSTALL.ps
@@ -11,7 +11,7 @@
 %DVIPSWebPage: (www.radicaleye.com)
 %DVIPSCommandLine: dvips -t a4 -o INSTALL.ps INSTALL.dvi
 %DVIPSParameters: dpi=600, compressed
-%DVIPSSource:  TeX output 2002.07.30:1359
+%DVIPSSource:  TeX output 2002.08.05:1542
 %%BeginProcSet: texc.pro
 %!
 /TeXDict 300 dict def TeXDict begin/N{def}def/B{bind def}N/S{exch}N/X{S
@@ -334,8 +334,8 @@ rf /Fo 136[ 149 103 115 69 80 92 1[ 115 103 115 172 57
 55 55 60 76 37 47 47 47 23 23 42 42 42 42 42 42 42 42
 42 42 23 21 28 21 47 42 28 28 28 2[ 42 42 34 28 29[ 46
 46 2[{ TeXBase1Encoding ReEncodeFont} 92 83.022 /Times-Roman
-rf /Fq 134[ 50 3[ 50 28 7[ 28 3[ 50 29[ 39 22[ 50 50
-1[ 50 48[{ TeXBase1Encoding ReEncodeFont} 9 99.6264 /Times-Roman
+rf /Fq 138[ 50 28 39 10[ 50 50 37[ 72 11[ 50 2[ 50 1[ 50
+48[{ TeXBase1Encoding ReEncodeFont} 9 99.6264 /Times-Roman
 rf /Fr 138[ 72 40 56 2[ 72 72 72 1[ 40 2[ 40 72 2[ 64
 72 1[ 72 64 6[ 88 16[ 48 1[ 104 20[ 72 3[ 36 46[{
 TeXBase1Encoding ReEncodeFont} 18 143.462 /Times-Roman
@@ -771,8 +771,8 @@ end
 @endspecial 591 2998 a
  currentpoint currentpoint translate 1 1.06113 div 1 1.06113 div scale
 neg exch neg exch translate
- 591 2998 a Fq 1616 3264 a(30th) 24
-b(July) g(2002) p 90 rotate dyy eop
+ 591 2998 a Fq 1580 3264 a(5th) 25
+b(August) e(2002) p 90 rotate dyy eop
 %%Page: 1 2
 1 1 bop 150 138 a
  currentpoint currentpoint translate 0.42603 0.42603 scale neg exch
@@ -2606,99 +2606,93 @@ end
  currentpoint currentpoint translate 1 0.42603 div 1 0.42603 div scale
 neg exch neg exch translate
  150 138 a 150 172 3525 4 v Fi 275
-333 a(\017) p Fp 41 w(Access) 21 b(to) f(Apache') -5
-b(s) 20 b(httpd.co) n(nf) g(for) g(creating) g(tw) o(o) h(virtu) n(al) g
-(hosts) g(and) f(for) g(enablin) n(g) h(the) g(re) n(write) f(engin) n
-(e) h(and) 358 432 y(creatin) n(g) g(re) n(write) f(rules.) k(This) d
-(is) g(absolutely) e(necessary) g(for) h(eZ) g(Publish) g(at) h(the) f
-(momen) n(t.) p Fi 275 598 a(\017) p Fp 41 w(Access) j(to) g(comp) n
-(iler) m(,) g(only) f(need) n(ed) h(if) g(you) e(can') o(t) h(use) h
-(an) o(y) f(of) g(the) h(pre-) n(compiled) e(package) n(s) j(a) n(v) n
-(ailable.) 32 b(\(Y) -9 b(o) n(u) 358 698 y(will) 16
-b(ha) n(v) o(e) g(to) g(install) h(the) f(gcc) g(comp) n(iler) h(on) f
-(you) n(r) g(system,) h(see) g(chapter) e(1) h(for) g(a) g(list) i(of) d
-(sites) j(pro) m(viding) d(softw) o(are) 358 798 y(for) k(dif) n(fer) n
-(ent) i(Unix) o(e) n(s.\)) p Fi 275 964 a(\017) p Fp
-41 w(Access) f(to) h(a) f(shell) h(\(Y) -9 b(ou) 19 b(must) h(run) g
-(certain) g(scripts) g(durin) n(g) h(installation,) e(and) h(sometimes)
-g(for) f(maintenan) n(ce.\)) p Fi 275 1130 a(\017) p
-Fp 41 w(Access) h(to) g(cron) f(jobs) h(\(Only) f(needed) g(if) h(you) f
-(w) o(ant) h(to) g(use) g(the) g(eZ) g(ne) n(ws) g(feed) g(mod) n(ule) g
-(for) f(re) o(gular) g(upd) n(ates) i(of) 358 1229 y(head) n(lines) g
-(impor) n(ted) f(from) g(other) f(sites.\)) p Fi 275
-1395 a(\017) p Fp 41 w(Access) h(to) h(Apach) n(e') -5
-b(s) 21 b(modules) p Fi 275 1561 a(\017) p Fp 41 w(Access) f(to) h(a) f
-(MySQL) g(or) g(PostgreSQL) g(database) p Fi 275 1727
+333 a(\017) p Fp 41 w(Access) 17 b(to) g(Apache') -7
+b(s) 18 b(httpd.co) n(nf) f(for) f(creating) g(tw) o(o) h(virtual) f
+(hosts,) i(enablin) n(g) f(the) g(re) n(write) g(eng) n(ine) g(and) g
+(creatin) n(g) 358 432 y(re) n(write) 31 b(rules.) 61
+b(Ho) n(we) n(v) m(er) m(,) 35 b(this) d(is) h(not) f(needed) f(if) h
+(you) f(w) o(ant) h(to) h(run) e(eZ) h(publish) f(in) i(nVH) f(mod) n
+(e.) 61 b(More) 358 532 y(info) n(rmation) 19 b(aboutth) n(e) i(nVH) f
+(mode) f(is) j(a) n(v) n(ailable) d(in) i(chap) n(ter) g(3.) p
+Fi 275 698 a(\017) p Fp 41 w(Access) i(to) g(comp) n(iler) m(,) g(only)
+f(need) n(ed) h(if) g(you) e(can') o(t) h(use) h(an) o(y) f(of) g(the) h
+(pre-) n(compiled) e(package) n(s) j(a) n(v) n(ailable.) 32
+b(\(Y) -9 b(o) n(u) 358 798 y(will) 16 b(ha) n(v) o(e) g(to) g(install)
+h(the) f(gcc) g(comp) n(iler) h(on) f(you) n(r) g(system,) h(see) g
+(chapter) e(1) h(for) g(a) g(list) i(of) d(sites) j(pro) m(viding) d
+(softw) o(are) 358 897 y(for) k(dif) n(fer) n(ent) i(Unix) o(e) n(s.\))
+p Fi 275 1063 a(\017) p Fp 41 w(Access) f(to) h(a) f(shell) h(\(Y) -9
+b(ou) 19 b(must) h(run) g(certain) g(scripts) g(durin) n(g) h
+(installation,) e(and) h(sometimes) g(for) f(maintenan) n(ce.\)) p
+Fi 275 1229 a(\017) p Fp 41 w(Access) h(to) g(cron) f(jobs) h(\(Only) f
+(needed) g(if) h(you) f(w) o(ant) h(to) g(use) g(the) g(eZ) g(ne) n(ws)
+g(feed) g(mod) n(ule) g(for) f(re) o(gular) g(upd) n(ates) i(of) 358
+1329 y(head) n(lines) g(impor) n(ted) f(from) g(other) f(sites.\)) p
+Fi 275 1495 a(\017) p Fp 41 w(Access) h(to) h(Apach) n(e') -5
+b(s) 21 b(modules) p Fi 275 1661 a(\017) p Fp 41 w(Access) f(to) h(a) f
+(MySQL) g(or) g(PostgreSQL) g(database) p Fi 275 1827
 a(\017) p Fp 41 w(Y) -9 b(ou) 19 b(might) h(also) g(need) g(the) g(pri)
 n(vile) o(g) n(e) g(to) h(add) e(ne) n(w) h(libraries) g(to) h(you) n
-(r) g(system.) 150 1935 y(Y) -9 b(ou) 19 b(might) g(also) h(use) g
-(other) f(web) h(serv) o(ers) f(than) h(apach) n(e,) g(b) n(ut) g(then)
-f(you') -6 b(re) 20 b(on) g(you) n(r) g(o) n(wn) f(since) h(we) g(ha) n
-(v) o(en') m(t) g(tested) g(eZ) 150 2035 y(publish) k(on) h(other) f
-(con\002gu) n(rations.) 40 b(If) 25 b(you) f(do) h(try) g(anoth) n(er) h
-(web) f(serv) o(er) -5 b(,) 27 b(please) e(k) o(eep) g(a) g(log) g(of) g
-(what) g(you) f(do) h(and) 150 2134 y(submit) 20 b(it) h(to) f(us) h
-(\(pk) m(ej@ez.no\)) f(for) f(inclusion) h(in) g(futur) n(e) h(v) o
-(ersion) n(s) g(of) f(this) h(manu) n(al.) p Fh 150 2397
-a(2.1.2) 99 b(Needed) 26 b(Softwar) n(e) p Fp 150 2577
-a(Y) -9 b(ou) 15 b(also) i(need) e(to) h(do) n(wnlo) n(ad) g(and) g
-(install) g(the) g(follo) n(wing) f(packa) n(ges,) i(if) g(the) o(y) e
-(aren') m(t) i(presen) n(t) g(on) f(you) n(r) g(system) h(alread) n(y:)
-p Fi 275 2785 a(\017) p Fp 41 w(A) 23 b(database.) 33
-b(Curren) n(tly) -5 b(,) 23 b(eZ) g(publish) f(supppo) n(rts) i(MySQL) e
-(\(http://www) -5 b(.m) n(ysql.com) n(\)) 23 b(v) o(ersion) f(3.23) g
-(or) g(later) 358 2885 y(and) d(PostgreSQL) h(\(http://www) -5
-b(.) n(postgresq) n(l.or) o(g) n(\)) 21 b(v) o(er) n(sion) g(7.1) n(.3)
-f(or) g(later) -5 b(.) p Fi 275 3051 a(\017) p Fp 41
-w(Imag) n(eMagick) 19 b(\(http://www) -5 b(.) n(imagemag) n(ick.or) m
-(g/\)) 20 b(ne) n(west) f(v) o(ersion) g(\(Needed) g(by) g(eZ) h
-(article,) f(eZ) h(image) g(cata-) 358 3150 y(logu) n(e,) h(and) e(all)
-i(modu) n(les) g(using) f(images.) k(Y) -9 b(ou) 20 b(need) g(only) f
-(the) h(comma) n(nd) g(line) h(v) o(er) n(sion.\)) p
-Fi 275 3316 a(\017) p Fp 41 w(Apach) n(e) 33 b(\(http://h) n(ttpd.apa) n
-(che.or) o(g) n(/\)) f(latest) h(1.3) e(release.) 61
-b(\(It) 32 b(is) h(al) o(w) o(ays) f(recomm) n(ended) f(to) h(run) g
-(the) g(latest) 358 3416 y(Apach) n(e) 25 b(release,) h(thoug) n(h) f
-(eZ) g(pub) n(lish) h(should) n(n') o(t) e(be) h(v) o(ery) f(pick) m(y)
-h(with) g(the) g(Apach) n(e) h(v) o(er) n(sions.) 39
-b(W) -7 b(e') l(v) o(e) 25 b(used) 358 3516 y(eZ) 20
-b(pub) n(lish) h(with) g(Apach) n(e) g(1.3.) n(13,) f(some) g(ha) n(v) o
-(e) f(reported) g(that) h(Apache) f(1.3.9) g(isn') o(t) h(useful.\)) p
-Fi 275 3682 a(\017) p Fp 41 w(mod) n(_re) n(write.) 28
-b(This) 22 b(apache) f(mod) n(ule) h(is) g(included) e(in) i(all) g
-(recent) f(v) o(ersion) n(s) i(of) e(RedHat) h(Linux) n(.) 30
-b(If) 21 b(you) g(use) h(an) 358 3781 y(other) d(distro,) h(you) f(may)
-h(need) f(to) h(recomp) n(ile) h(apache) e(with) i(mod) n(_re) n(write)
-p Fi 275 3947 a(\017) p Fp 41 w(An) o(y) e(and) h(all) g(modules) g
-(you) f(need) g(for) h(apache) f(in) h(addition) f(to) i(mod) n(_php) n
-(.) 26 b(\(http://mo) n(dules.ap) n(ache.or) m(g/\)) p
-Fi 275 4113 a(\017) p Fp 41 w(PHP) g(\(http) n(://www) -5
-b(.php) n(.net/\)) 25 b(v) o(ersion) f(4.0.4) n(pl1) h(or) g(later) -5
-b(.) 41 b(V) -9 b(ersion) 24 b(4.0.6) g(is) i(recomm) n(ended.) 39
-b(Y) -9 b(ou) 25 b(need) g(the) 358 4213 y(sourc) n(e) e(code) e(v) o
+(r) g(system.) p Fh 150 2090 a(2.1.2) 99 b(Needed) 26
+b(Softwar) n(e) p Fp 150 2270 a(Y) -9 b(ou) 15 b(also) i(need) e(to) h
+(do) n(wnlo) n(ad) g(and) g(install) g(the) g(follo) n(wing) f(packa) n
+(ges,) i(if) g(the) o(y) e(aren') m(t) i(presen) n(t) g(on) f(you) n(r)
+g(system) h(alread) n(y:) p Fi 275 2478 a(\017) p Fp
+41 w(A) 23 b(database.) 33 b(Curren) n(tly) -5 b(,) 23
+b(eZ) g(publish) f(supppo) n(rts) i(MySQL) e(\(http://www) -5
+b(.m) n(ysql.com) n(\)) 23 b(v) o(ersion) f(3.23) g(or) g(later) 358
+2577 y(and) d(PostgreSQL) h(\(http://www) -5 b(.) n(postgresq) n(l.or) o
+(g) n(\)) 21 b(v) o(er) n(sion) g(7.1) n(.3) f(or) g(later) -5
+b(.) p Fi 275 2743 a(\017) p Fp 41 w(Imag) n(eMagick) 19
+b(\(http://www) -5 b(.) n(imagemag) n(ick.or) m(g/\)) 20
+b(ne) n(west) f(v) o(ersion) g(\(Needed) g(by) g(eZ) h(article,) f(eZ) h
+(image) g(cata-) 358 2843 y(logu) n(e,) h(and) e(all) i(modu) n(les) g
+(using) f(images.) k(Y) -9 b(ou) 20 b(need) g(only) f(the) h(comma) n
+(nd) g(line) h(v) o(er) n(sion.\)) p Fi 275 3009 a(\017) p
+Fp 41 w(Apach) n(e) 33 b(\(http://h) n(ttpd.apa) n(che.or) o(g) n(/\)) f
+(latest) h(1.3) e(release.) 61 b(\(It) 32 b(is) h(al) o(w) o(ays) f
+(recomm) n(ended) f(to) h(run) g(the) g(latest) 358 3109
+y(Apach) n(e) 25 b(release,) h(thoug) n(h) f(eZ) g(pub) n(lish) h
+(should) n(n') o(t) e(be) h(v) o(ery) f(pick) m(y) h(with) g(the) g
+(Apach) n(e) h(v) o(er) n(sions.) 39 b(W) -7 b(e') l(v) o(e) 25
+b(used) 358 3208 y(eZ) 20 b(pub) n(lish) h(with) g(Apach) n(e) g(1.3.) n
+(13,) f(some) g(ha) n(v) o(e) f(reported) g(that) h(Apache) f(1.3.9) g
+(isn') o(t) h(useful.\)) p Fi 275 3374 a(\017) p Fp 41
+w(mod) n(_re) n(write.) 28 b(This) 22 b(apache) f(mod) n(ule) h(is) g
+(included) e(in) i(all) g(recent) f(v) o(ersion) n(s) i(of) e(RedHat) h
+(Linux) n(.) 30 b(If) 21 b(you) g(use) h(an) 358 3474
+y(other) d(distro,) h(you) f(may) h(need) f(to) h(recomp) n(ile) h
+(apache) e(with) i(mod) n(_re) n(write) p Fi 275 3640
+a(\017) p Fp 41 w(An) o(y) e(and) h(all) g(modules) g(you) f(need) g
+(for) h(apache) f(in) h(addition) f(to) i(mod) n(_php) n(.) 26
+b(\(http://mo) n(dules.ap) n(ache.or) m(g/\)) p Fi 275
+3806 a(\017) p Fp 41 w(PHP) g(\(http) n(://www) -5 b(.php) n(.net/\)) 25
+b(v) o(ersion) f(4.0.4) n(pl1) h(or) g(later) -5 b(.) 41
+b(V) -9 b(ersion) 24 b(4.0.6) g(is) i(recomm) n(ended.) 39
+b(Y) -9 b(ou) 25 b(need) g(the) 358 3906 y(sourc) n(e) e(code) e(v) o
 (ersion) g(from) g(this) i(site,) g(for) f(windo) l(ws) h(you) e(can) h
 (just) h(do) n(wn) n(load) f(the) g(binary) -7 b(.) 31
-b(\(eZ) 22 b(pub) n(lish) h(uses) 358 4313 y(refer) n(ences) 30
+b(\(eZ) 22 b(pub) n(lish) h(uses) 358 4005 y(refer) n(ences) 30
 b(for) g(objects) g(and) g(foreac) n(h) h(loop) n(s.) 57
 b(Only) 29 b(v) o(ersion) g(4.0.4p) n(l1) h(and) g(later) h(supp) n
-(orts) g(both) e(of) h(these) 358 4412 y(featur) n(es) 21
-b(satisf) o(actorily) -5 b(.) n(\)) p Fi 275 4578 a(\017) p
+(orts) g(both) e(of) h(these) 358 4105 y(featur) n(es) 21
+b(satisf) o(actorily) -5 b(.) n(\)) p Fi 275 4271 a(\017) p
 Fp 41 w(eZ) 20 b(pub) n(lish) h(\(http://de) n(v) m(eloper) -7
 b(.ez.no/\)) 19 b(v) o(erision) g(2.0) h(or) g(later) g(stable) h
-(releases.) 150 4786 y(The) e(libraries) h(and) f(php) g(are) h(pack) n
+(releases.) 150 4479 y(The) e(libraries) h(and) f(php) g(are) h(pack) n
 (aged) f(pre-co) n(mpiled) g(for) g(Linux) g(i386) g(on) g(http://de) n
 (v) o(e) n(loper) -5 b(.ez.n) n(o.) 25 b(The) 19 b(softw) o(are) h(is)
-150 4885 y(listed) h(in) f(the) g(order) f(of) h(installation.) 150
-5010 y(Y) -9 b(ou) 20 b(shou) n(ld) h(also) f(\002nd) g(a) h(list) g
+150 4578 y(listed) h(in) f(the) g(order) f(of) h(installation.) 150
+4703 y(Y) -9 b(ou) 20 b(shou) n(ld) h(also) f(\002nd) g(a) h(list) g
 (of) f(RPMs) h(at) g(http://www) -5 b(.b) n(randish.) n(co.uk/p) n
-(hprp) n(m) p Fn 150 5134 a(Important) 20 b(r) o(elea) n(se) h(note:) p
-Fp 150 5259 a(eZ) e(publish) g(v) o(er) n(sion) h(2.2) n(.2) f(does) g
+(hprp) n(m) p Fn 150 4827 a(Important) 20 b(r) o(elea) n(se) h(note:) p
+Fp 150 4952 a(eZ) e(publish) g(v) o(er) n(sion) h(2.2) n(.2) f(does) g
 (not) g(requir) n(e) h(neither) e(QDom) h(or) g(libxml) g(as) h(pre) n
 (v) n(iosly) f(releases) h(did.) k(In) 19 b(this) h(release,) 150
-5359 y(eZ) f(publish) f(uses) i(it) g(o) n(wn) f(xml) f(parser) h(:) 25
+5051 y(eZ) f(publish) f(uses) i(it) g(o) n(wn) f(xml) f(parser) h(:) 25
 b(eZ) 19 b(xml.) 25 b(Option) n(inal) 20 b(supp) n(ort) f(for) g
 (libxml) f(will) i(prob) n(ably) f(be) g(reintro) n(duced) f(in) 150
-5458 y(a) j(futu) n(re) g(v) o(er) n(sion) g(of) e(eZ) i(pub) n(lish) p
+5151 y(a) j(futu) n(re) g(v) o(er) n(sion) g(of) e(eZ) i(pub) n(lish) p
 150 5723 V 1892 5823 a(6) p 90 rotate dyy eop
 %%Page: 7 8
 7 7 bop 150 138 a
