--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/installation/INSTALL.lyx
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/installation/INSTALL.lyx
@@ -303,9 +303,15 @@ For the standard installation of eZ publish you will need to have the following
  privileges on your system:
 \layout Itemize
 
-Access to Apache's httpd.conf for creating two virtual hosts and for enabling
- the rewrite engine and creating rewrite rules.
- This is absolutely necessary for eZ Publish at the moment.
+Access to Apache's httpd.conf for creating two virtual hosts, enabling the
+ rewrite engine and creating rewrite rules.
+ However, this is not needed if you want to run eZ publish in nVH mode.
+ More information aboutthe nVH mode is available in chapter 
+\begin_inset LatexCommand \ref{chpt: nVH}
+
+\end_inset 
+
+.
 \layout Itemize
 
 Access to compiler, only needed if you can't use any of the pre-compiled
@@ -334,12 +340,6 @@ Access to a MySQL or PostgreSQL database
 \layout Itemize
 
 You might also need the privilege to add new libraries to your system.
-\layout Standard
-
-You might also use other web servers than apache, but then you're on your
- own since we haven't tested eZ publish on other configurations.
- If you do try another web server, please keep a log of what you do and
- submit it to us (pkej@ez.no) for inclusion in future versions of this manual.
 \layout Subsection
 
 Needed Software
