--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/installation/INSTALL.tex
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/installation/INSTALL.tex
@@ -163,9 +163,10 @@ For the standard installation of eZ publish you will need to have
 the following privileges on your system:
 
 \begin{itemize}
-\item Access to Apache's httpd.conf for creating two virtual hosts and for
-enabling the rewrite engine and creating rewrite rules. This is absolutely
-necessary for eZ Publish at the moment.
+\item Access to Apache's httpd.conf for creating two virtual hosts, enabling
+the rewrite engine and creating rewrite rules. However, this is not
+needed if you want to run eZ publish in nVH mode. More information
+aboutthe nVH mode is available in chapter \ref{chpt: nVH}.
 \item Access to compiler, only needed if you can't use any of the pre-compiled
 packages available. (You will have to install the gcc compiler on
 your system, see chapter \ref{chptr: introduction} for a list of
@@ -178,12 +179,6 @@ module for regular updates of headlines imported from other sites.)
 \item Access to a MySQL or PostgreSQL database
 \item You might also need the privilege to add new libraries to your system.
 \end{itemize}
-You might also use other web servers than apache, but then you're
-on your own since we haven't tested eZ publish on other configurations.
-If you do try another web server, please keep a log of what you do
-and submit it to us (pkej@ez.no) for inclusion in future versions
-of this manual.
-
 
 \subsection{Needed Software}
 
