--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -3,6 +3,7 @@ eZ publish changelog:
 
 Changes from 2.2.6 to 2.2.7
 ---------------------------
+* Made sure that permissions on images are correctly handled when read AND write is required (required with DE).
 * Removed qdom from meta keywords.
 * Made it possible to reuse headlines more than one time pr page.
 * Fixed bug when editing a table with rowspan or colspan set.
