--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -1,6 +1,10 @@
 eZ publish changelog:
 ---------------------
 
+Changes from 2.2.7 to 2.2.8
+---------------------------
+* Added menufilelist for listing files from a folder in the filemanager in the frame.php
+
 Changes from 2.2.6 to 2.2.7
 ---------------------------
 * Fixed problem with xmlrpc reply regarding payload. Made sure no extra characters
