--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -4,6 +4,8 @@ eZ publish changelog:
 Changes from 2.2.7 to 2.2.8
 ---------------------------
 * Added menufilelist for listing files from a folder in the filemanager in the frame.php
+* Fixed bug when adding/editing ads in "Section edit" if no productcategories 
+  exist in eZ trade.
 
 Changes from 2.2.6 to 2.2.7
 ---------------------------
