--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -9,6 +9,8 @@ Changes from 2.2.7 to 2.2.8
   exist in eZ trade.
 * Fixed cache bug in eZTrade (productlist)
 * Made keywords available in articleview.tpl and as a variable which can be used in frame.php
+* Fixed bug in todolist.
+* Added rollovertag.
 
 Changes from 2.2.6 to 2.2.7
 ---------------------------
