--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -17,6 +17,7 @@ Changes from 2.2.7 to 2.2.8
 * Fixed bug with dayview in eZ stats.
 * Fixed bug with attribute list in eZ article.
 * Added indexes in eZStat. This resolves performance problems with cron.php
+* XMLRPC: Made sure the article cache is deleted when the article is deleted.
 
 Changes from 2.2.6 to 2.2.7
 ---------------------------
