--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -21,6 +21,7 @@ Changes from 2.2.7 to 2.2.8
 * Fixed bug with permissions in filedownload for eZ filemanager.
 * Fixed bug in eZ link. The function id() apeared twice.
 * Fixed bug in eZ form. Language was not set to the template, when sending a form.
+* Fixed security bug in articleheaderlist with the variable CategoryID.
 
 Changes from 2.2.6 to 2.2.7
 ---------------------------
