fixed bug with time publishing of articles.

--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -24,6 +24,7 @@ Changes from 2.2.7 to 2.2.8
 * Fixed security bug in articleheaderlist with the variable CategoryID.
 * Fixed permissions in eZ article (articleuncached).
 * Fixed permission bug with upload of files in eZ imagecatalogue.
+* Fixed bug with time publishing of articles (in categories with editor)
 
 Changes from 2.2.6 to 2.2.7
 ---------------------------
