added lines for speed updates

--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -25,6 +25,8 @@ Changes from 2.2.7 to 2.2.8
 * Fixed permissions in eZ article (articleuncached).
 * Fixed permission bug with upload of files in eZ imagecatalogue.
 * Fixed bug with time publishing of articles (in categories with editor)
+* Large speed improvements in the article module (large cut-down in sql queries)
+* Speed improvements in module handler
 
 Changes from 2.2.6 to 2.2.7
 ---------------------------
