--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -1,5 +1,8 @@
 eZ publish changelog:
 ---------------------
+Changes from 2.2.8 to 2.2.9
+---------------------------
+* fixed security bug with variable check in eZ article
 
 Changes from 2.2.7 to 2.2.8
 ---------------------------
