--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -4,6 +4,13 @@ Changes from 2.2.8 to 2.2.9
 ---------------------------
 * Fixed security bug with variable check in eZ article.
 * Fixed security bug with session variable.
+* Fixed bug with permission when non logged in users had write access to the image catalogue
+* Fixed bug with section override templates in article view
+* Fixed typo in section edit
+* Fixed cache bugs in headline view
+* Fixed bug with addresses
+* Improved MySQL 4 support in eZ trade
+* Added missing SQL queries for permission system
 
 Changes from 2.2.7 to 2.2.8
 ---------------------------
