removed link to Entry/exit pages report in eZ stats

--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -11,6 +11,7 @@ Changes from 2.2.8 to 2.2.9
 * Fixed bug with addresses
 * Improved MySQL 4 support in eZ trade
 * Added missing SQL queries for permission system
+* Removed link to Entry/exit pages report in eZ stats
 
 Changes from 2.2.7 to 2.2.8
 ---------------------------
