--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -14,6 +14,7 @@ Changes from 2.2.8 to 2.2.9
 * Removed link to Entry/exit pages report in eZ stats.
 * Fixed security bug with variable check in messagebody in eZ forum.
 * Fixed security bug with variable check in search in eZ filemanager.
+* improved class eZHit in eZ link.
 
 Changes from 2.2.7 to 2.2.8
 ---------------------------
