--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -18,6 +18,7 @@ Changes from 2.2.8 to 2.2.9
 * Fixed bug with eZAd view count in frame.php and frontpage.
 * Added optimalisation on classes in eZ imagecatalogue.
 * Fixed bug for non virtualhost in articletool.php
+* Done optimalisation to eZ stats.
 
 Changes from 2.2.7 to 2.2.8
 ---------------------------
