--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -22,6 +22,7 @@ Changes from 2.2.8 to 2.2.9
 * Fixed bug with read permissions on products in eZ trade.
 * Fixed bug with customtag in table.
 * Fixed bug with invalid content type header sendt with RSS article list
+* Fixed bug with Article title not beeing escaped when added as link item to a product (productedit)
 
 Changes from 2.2.7 to 2.2.8
 ---------------------------
